# price_optimisation

./: README.md  pyproject.toml
data/: price_data1.csv
notebook/: price_optimisation_exp.ipynb
